module03/myapp-deploy/myapptodo-deploy.yaml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: myapptodo
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: myapp   # This label identifies our application, used for filtering output
        component: todo    # This label identifies component, used for Service definition
        type: release    # This label identifies actual release vs. canary etc.
    spec:
      containers:
      - name: myappspa
        image: YOURACRNAME.azurecr.io/myapptodo:v1   # Best practice - always define specific tag, do not rely on latest
        imagePullPolicy: Always    # Best practice for security - user will no access to image might get it from local cache
        ports:  # We cannot run on ports <1024 because that would require root
        - containerPort: 8080
        livenessProbe:    # Best practice for stability - always define probes to detect hanged process
          httpGet:
            path: /
            port: 8080
        readinessProbe:
          httpGet:
            path: /
            port: 8080
        resources:
          limits:
            cpu: 500m
            memory: 256Mi
          requests:
            cpu: 250m
            memory: 256Mi
