module03/myapp-deploy/myappspa-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: myappspa
  name: myappspa
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
    name: http
  selector:
    app: myappspa
