module03/myapp-deploy/myapptodo-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: myapptodo
  name: myapptodo
spec:
  selector:
    app: myapp
    component: todo
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
    name: http
