module03/myapp-deploy/myapptodo-ing.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: myapptodo
  labels:
    app: myapptodo
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: "/api/todo"
spec:
  rules:
    - host: 0.0.0.0.xip.io
      http:
        paths:
          - path: /api/todo
            backend:
              serviceName: myapptodo
              servicePort: 8080
